-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 16, 17
-
Component/s: hotspot
-
b10
The tracing of code heap page sizes is not always correct since the traced page sizes is "calculated" using both min and max size of the traced heap while the reservation only cares about the total size given by ReservedCodeCacheSize.
The page sized used when creating the ReservedCodeSpace in CodeCache::reserve_heap_memory() will be the page size used by all heaps added into that reservation. So rather then re-calculating the page size in CodeHeap::reserve(), the passed in reserved space should be looked at. Currently this is a bit problematic since a ReservedSpace doesn't hold the page size, but we can check if it is special or not and that way know if it is using large pages or not.
The page sized used when creating the ReservedCodeSpace in CodeCache::reserve_heap_memory() will be the page size used by all heaps added into that reservation. So rather then re-calculating the page size in CodeHeap::reserve(), the passed in reserved space should be looked at. Currently this is a bit problematic since a ReservedSpace doesn't hold the page size, but we can check if it is special or not and that way know if it is using large pages or not.
- relates to
-
JDK-8087339 The code heap might use different alignment for committed size and reserved size
-
- Resolved
-
-
JDK-8261230 GC tracing of page sizes are wrong in a few places
-
- Resolved
-
-
JDK-8261527 Record page size used for underlying mapping in ReservedSpace
-
- Resolved
-
-
JDK-8262188 Add test to verify trace page sizes logging on Linux
-
- Resolved
-
(1 links to)