8261029: Code heap page sizes not traced correctly using os::trace_page_sizes